--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
       <div class="gallery-grid">
         <!-- تصاویر نمونه؛ src را عوض کن -->
         <figure class="gallery-item">
-          <img src="raika-media-1.jpg" alt="Media sample 1">
+          <img src="Raika/raika-media-1.jpg" alt="Media sample 1">
           <figcaption class="gallery-label" data-i18n="gallery.label.media"></figcaption>
         </figure>
         <figure class="gallery-item">
@@ -1281,4 +1281,5 @@
   </script>
 </body>
 </html>
+
 
