--- a/index.html
+++ b/index.html
@@ -761,19 +761,19 @@
       <div class="gallery-grid">
         <!-- تصاویر نمونه؛ src را عوض کن -->
         <figure class="gallery-item">
-          <img src="Raika/raika-media-1.jpg" alt="Media sample 1">
+          <img src="raika1.jpg" alt="Media sample 1">
           <figcaption class="gallery-label" data-i18n="gallery.label.media"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika-media-2.jpg" alt="Media sample 2">
+          <img src="raika2.jpg" alt="Media sample 2">
           <figcaption class="gallery-label" data-i18n="gallery.label.events"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika-dev-1.jpg" alt="Dev sample">
+          <img src="raika3.jpg" alt="Dev sample">
           <figcaption class="gallery-label" data-i18n="gallery.label.tech"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika-team-1.jpg" alt="Team">
+          <img src="raika4.jpg" alt="Team">
           <figcaption class="gallery-label" data-i18n="gallery.label.team"></figcaption>
         </figure>
       </div>
@@ -1281,5 +1281,6 @@
   </script>
 </body>
 </html>
+
 
 
