--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
       <aside class="hero-panel ceo-panel">
         <div class="ceo-block">
           <!-- عکس مدیرعامل در ریشه ریپو -->
-          <img class="ceo-img" src="ceo.jpg" alt="CEO">
+          <img class="ceo-img" src="imageceo.jpg" alt="CEO">
           <div class="ceo-overlay">
             <div class="ceo-name" data-i18n="ceo.name"></div>
             <div class="ceo-role" data-i18n="ceo.role"></div>
@@ -1383,3 +1383,4 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
