--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     }
 
     .hero-title {
-      font-family: "Peyda", "Satoshi", sans-serif;
+      font-family: "Peyda", "Satoshi","IRANYekan", sans-serif;
       font-weight: 900;
       font-size: 32px;
       line-height: 1.5;
@@ -677,7 +677,7 @@
       <aside class="hero-panel ceo-panel">
         <div class="ceo-block">
           <!-- عکس مدیرعامل در ریشه ریپو -->
-          <img class="ceo-img" src="imageceo.jpg" alt="CEO">
+          <img class="ceo-img" src="imagesceo.jpg" alt="CEO">
           <div class="ceo-overlay">
             <div class="ceo-name" data-i18n="ceo.name"></div>
             <div class="ceo-role" data-i18n="ceo.role"></div>
@@ -1383,4 +1383,5 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
 
