--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
           name: "محمد صالح نکوئی سامانی",
           role: "Founder & CEO – Media & Tech Strategist",
           bio:
-            "من، محمد صالح نکوئی سامانی، به عنوان بنیان‌گذار و مدیرعامل رایکا، مسیر کاری خودم را از دل رسانه و گویندگی آغاز کردم و با ورود به دنیای برنامه‌نویسی و فناوری تلاش کرده‌ام پلی میان روایت، تصویر و کد بسازم. رایکا برای من فقط یک شرکت نیست؛ یک آزمایشگاه هویت‌سازی است که در آن با کمک تیمی جوان و متخصص، برای برندها آینده‌ای روشن، منسجم و قابل اعتماد طراحی می‌کنیم."
+            "من، محمد صالح نکوئی سامانی، به عنوان بنیان‌گذار و مدیرعامل رایکا، مسیر کاری خودم را از دل رسانه آغاز کردم و با ورود به دنیای برنامه‌نویسی تلاش کرده‌ام پلی میان روایت، تصویر و کد بسازم. رایکا برای من فقط یک شرکت نیست؛ یک خانه هویت‌سازی است که در آن با کمک تیمی جوان و متخصص، برای برندها آینده‌ای روشن، منسجم و قابل اعتماد طراحی می‌کنیم."
         },
         about: {
           kicker: "ABOUT RAIKA",
@@ -1383,6 +1383,7 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
 
 
 
