--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
       <div class="gallery-grid">
         <!-- تصاویر در ریشه ریپو -->
         <figure class="gallery-item">
-          <img src="raika1.jpg" alt="Media sample 1">
+<img src="/Raika/raika1.jpg" alt="Media sample 1">
           <figcaption class="gallery-label" data-i18n="gallery.label.media"></figcaption>
         </figure>
         <figure class="gallery-item">
@@ -1383,6 +1383,7 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
 
 
 
