--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/Raika/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/Raika/favicon.png">
+  <link rel="apple-touch-icon" href="/Raika/favicon.png">
+  
   <meta charset="UTF-8">
   <title>شرکت پیشگامان دنیای نوین رایکا | هویت‌سازی، رسانه و برنامه‌نویسی</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1383,6 +1387,7 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
 
 
 
