--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-  <link rel="icon" type="image/png" sizes="32x32" href="/Raika/favicon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/Raika/favicon.png">
-  <link rel="apple-touch-icon" href="/Raika/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/favicon.png">
   
   <meta charset="UTF-8">
   <title>شرکت پیشگامان دنیای نوین رایکا | هویت‌سازی، رسانه و برنامه‌نویسی</title>
@@ -827,19 +827,19 @@
       <div class="gallery-grid">
         <!-- تصاویر در ریشه ریپو -->
         <figure class="gallery-item">
-        <img src="raika1.jpg" alt="Media sample 1">
+        <img src="raika1.webp" alt="Media sample 1">
           <figcaption class="gallery-label" data-i18n="gallery.label.media"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika2.jpg" alt="Media sample 2">
+          <img src="raika2.webp" alt="Media sample 2">
           <figcaption class="gallery-label" data-i18n="gallery.label.events"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika3.jpg" alt="Dev sample">
+          <img src="raika3.webp" alt="Dev sample">
           <figcaption class="gallery-label" data-i18n="gallery.label.tech"></figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="raika4.jpg" alt="Team">
+          <img src="raika4.webp" alt="Team">
           <figcaption class="gallery-label" data-i18n="gallery.label.team"></figcaption>
         </figure>
       </div>
@@ -1387,6 +1387,7 @@
 <script type="text/javascript" src="https://formafzar.com/pages/formbuilder/ravesh-formbuilder.js" form-url="https://formafzar.com/form/u2b4c" form-style="fab" form-link-text="مشاهده فرم" form-button-color="#3f51b5" form-button-icon="https://formafzar.com/pages/formbuilder/images/send-icon.png" form-theme=""></script>
 
 <!--END--- FormAfzar.Com ----->
+
 
 
 
